# nerp_workbench

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
auth/: Dockerfile  app.py  requirements.txt
auth/templates/: login.html
backend/: Dockerfile
backend/app/: main.py
backend/app/api/routes/: apps.py  partner_entries.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  partner_entry.py
docs/: partner-access-spec.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: apps.ts  partnerEntries.ts
frontend/src/components/: AppTile.tsx  Dashboard.tsx  Layout.tsx
frontend/src/components/partner/: NewEntry.tsx  PartnerLayout.tsx
frontend/src/styles/: global.css
frontend/src/types/: index.ts
