[project]
name = "nerp-workbench"
version = "0.1.0"
description = "N-ERP Workbench Backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "markitdown[all]>=0.1.0",
    "python-multipart>=0.0.6",
]
